force-app/main/default/objects/ssot__Household__dlm/fields/ssot__Household_PartyId_map_Party_Id_N_1__c.field-meta.xml
<CustomField>
    <fullName>ssot__Household_PartyId_map_Party_Id_N_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Household_PartyId_map_Party_Id_N_1</label>
    <referenceTo>ssot__Party__dlm</referenceTo>
    <relationshipLabel>Household_PartyId_map_Party_Id_N_1</relationshipLabel>
    <relationshipName>Household_PartyId_map_Party_Id_N_1</relationshipName>
    <type>Lookup</type>
</CustomField>