force-app/main/default/objects/ssot__Household__dlm/fields/ssot__HouseholdCategory__c.field-meta.xml
<CustomField>
    <fullName>ssot__HouseholdCategory__c</fullName>
    <label>Household Category</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>HouseholdCategory</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>