force-app/main/default/objects/ssot__Household__dlm/fields/ssot__HouseholdIncome__c.field-meta.xml
<CustomField>
    <fullName>ssot__HouseholdIncome__c</fullName>
    <label>Household Income</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>HouseholdIncome</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>