force-app/main/default/objects/ssot__Household__dlm/fields/ssot__HouseholdSize__c.field-meta.xml
<CustomField>
    <fullName>ssot__HouseholdSize__c</fullName>
    <label>Household Size</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>HouseholdSize</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>